# domopool-proto

./: Dockerfile  Makefile  README.md  domopool.options  domopool.pb.c  domopool.pb.go  domopool.pb.h  domopool.proto  go.mod  go.sum
.github/workflows/: rust.yml
golang/: domopool.pb.go  go.mod
js/: domopool_pb.js
rust/: Cargo.toml
rust/src/: domopool.rs  lib.rs
src/: domopool.pb.c  domopool.pb.h
