[package]
name = "domopool-proto"
version = "__tag_ref__"
authors = ["David Sabatie <david.sabatie@notrenet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
